--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.unlimited.penguins.battextr"
+        applicationId "com.unlimited.penguins.loba"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
